# hover-iot-esp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: hover-iot-esp-ci.yml
components/iot_application/: CMakeLists.txt  Kconfig.projbuild  iot_application.cpp
components/iot_appplication/: CMakeLists.txt  Kconfig.projbuild  iot_application.cpp
components/iot_common/: CMakeLists.txt  iot_common.cpp
components/iot_component/: CMakeLists.txt  iot_component.cpp
components/iot_device/: CMakeLists.txt  iot_device.cpp  iot_device_util.cpp
components/iot_device/include/: iot_device.h  iot_device_defs.h
components/iot_device/priv/: iot_device_priv.h
components/iot_device/proto/: CMakeLists.txt  iot_device.proto
components/iot_device/proto-c/: iot_device.pb-c.c  iot_device.pb-c.h
components/iot_gpio/: CMakeLists.txt  iot_gpio.cpp
components/iot_mqtt/: CMakeLists.txt  iot_mqtt.cpp
components/iot_ota/: CMakeLists.txt  iot_ota.cpp
components/iot_ota/include/: iot_ota.h  iot_ota_defs.h
components/iot_ota/proto/: CMakeLists.txt  Makefile  iot_ota.proto
components/iot_ota/proto-c/: iot_ota.pb-c.c  iot_ota.pb-c.h
components/iot_proto/: CMakeLists.txt
components/iot_provision/: CMakeLists.txt  idf_component.yml  iot_provision.cpp
components/iot_provision/include/: iot_provision.h  iot_provision_defs.h
components/iot_provision/proto/: CMakeLists.txt  iot_provision.proto
components/iot_provision/proto-c/: iot_provision.pb-c.c  iot_provision.pb-c.h
components/iot_security/: CMakeLists.txt  (+1 more)
keys/: crypt_key
main/: CMakeLists.txt  main.cpp
(+52 files in other folders)
